temporary fix for the shifting of squares bug

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -8,7 +8,12 @@
 	height: 800px;
 	display: grid;
 	grid-template-rows:  100px 100px 100px 100px 100px 100px 100px 100px;
+	grid-gap: 0;
 }
 .row {
+	position: relative;
 	height: 100px;
+	margin: 0;
+	padding: 0;
+	border: 0;
 }
